--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.0.1(2025-05-05)
+------------------
+- up's OMT to 2.1.3 and refactor the repo for simple build and hosting
+- new trimet styles and the like
+
 1.0.0 (2021-05-10)
 ------------------
 - removes the python junk to simplify the project / structure
